--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Chunran Kang - Resume </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
         <link rel="stylesheet" href="portfolio_layout.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hanken+Grotesk">
