--- a/skills.html
+++ b/skills.html
@@ -8,29 +8,58 @@
 
     </head>
     <body>
-        <div>
-            <a href="index.html">Home</a>
-            <a href="goals.html">Goals</a>
-            <a href="skills.html">Skills</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
-        </div>
-        <h1>Skills</h1>
-        <img src="skills.jpg" alt="skills" width="600" height="400">
+        <header>
+            <h1>My Skills and Education</h1>
+            <nav>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="skill.html">Skills</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="goal.html">Goals</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </nav>
+        </header>
 
-    <p>
-        Curabitur elit tortor, efficitur eu enim at, fringilla varius nulla. 
-        Pellentesque orci lacus, sodales sit amet bibendum ut, tempus in mauris. 
-        Morbi tristique, lectus eu vestibulum hendrerit, justo nisl feugiat arcu, vel ultricies turpis elit eu dui. 
-        Nunc sed ipsum nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
-        Aenean porta scelerisque turpis eget tincidunt. Ut odio dui, consectetur ut tempus sed, porta pharetra odio. 
-        Vestibulum sit amet orci luctus, facilisis erat et, vulputate odio. 
-    </p> 
-    <p>
-        Quisque vulputate leo vitae pellentesque congue. 
-        Donec placerat vulputate enim, ut aliquam ipsum tincidunt nec. 
-        Suspendisse tempor tempus sem, vel tempor mauris maximus id. 
-        Aenean scelerisque felis vitae nunc pellentesque, in tincidunt enim hendrerit.
-    </p>
-    </body>    
+	<main>
+		<section>
+			<h2>Skills</h2>
+			<ul>
+				<li>HTML5</li>
+                <li>HTML & CSS </li>
+                <li>Python & Java</li>
+                <li>Microsoft Office </li>
+                <li>Tableau </li>
+                <li>SQL & Linux </li>
+                <li>Critical Thinking </li>
+                <li>Problem Solving </li>
+                <li>Teamwork </li>
+                <li>Time Management </li>
+			</ul>
+		</section>
+
+		<section>
+			<h2>Education</h2>
+			<ul>
+				<li>
+					<h3>Bachelor of Commerce</h3>
+					<p>Saint Mary’s University, 2009-2012</p>
+					<p>Relevant coursework:Principles of Economics, Business Finance, Marketing, Strategic Management, Organizational Behaviour.</p>
+				</li>
+				<li>
+					<h3>IT Database Administration Program</h3>
+					<p>Nova Scotia Community College(NSCC), 2022-2024</p>
+					<p>Skills learned: SQL, Database Web Design, Database Administration, Basic Python, Basic Java, Tableau</p>
+				</li>
+				<li>
+					<h3>Realtor in Nova Scotia, Certification</h3>
+					<p>Nova Scotia Association of REALTORS, 2019</p>
+				</li>
+			</ul>
+		</section>
+	</main>
+
+	<footer>
+		<p>&copy; 2023 Chunran Kang. All rights reserved.</p>
+	</footer>
+</body>
 </html>
