--- a/contact.html
+++ b/contact.html
@@ -2,33 +2,42 @@
 <html lang="en">
     <head>
         <title>Chunran Kang - Contact </title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
-        <link rel="stylesheet" href="portfolio_layout.css">
-
-    </head>
-    <body>
-        <div>
-            <a href="index.html">Home</a>
-            <a href="goals.html">Goals</a>
-            <a href="skills.html">Skills</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
-
-        </div>
-        <h1>Contact</h1>
-        <img src="contact.png" alt="contact" width="600" height="400">
         
 
-    <p>
-        Phone Number:
-    </p> 
-    <p>
-        Email:
-    </p> 
-    <p>
-        Address:
+    </head>
 
-    </p>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="skills.html">Skills</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="goals.html">Goals</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <h1>My Contact Information</h1>
+        </header>
+        <main>
+            <section>
+                <h2>Contact Me</h2>
+                <form>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+                    <input type="submit" value="Submit">
+                </form>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2023 My E-Portfolio. All rights reserved.</p>
+        </footer>
     </body>
 </html>
