--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Chunran Kang - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="portfolio_base.css">
-    <link rel="stylesheet" href="portfolio_index_layout.css">
+   
 
   </head>
   <body>
@@ -15,11 +15,11 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="goal.html">Goals</a></li>
+          <li><a href="goals.html">Goals</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-      </nav>
-      <img src="welcome.png" alt="Welcome" >
+      </nav> 
+      <h1>My e-Portfolio Webpage</h1>
     </header>
   
     <main>
