--- a/skills.html
+++ b/skills.html
@@ -4,20 +4,20 @@
         <title>Chunran Kang - Skills </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
-        <link rel="stylesheet" href="portfolio_layout.css">
+       
 
     </head>
     <body>
         <header>
-            <h1>My Skills and Education</h1>
             <nav>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="skill.html">Skills</a></li>
+                <li><a href="skills.html">Skills</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="goal.html">Goals</a></li>
+                <li><a href="goals.html">Goals</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
+            <h1>My Skills and Education</h1>
         </header>
 
 	<main>
@@ -58,8 +58,8 @@
 		</section>
 	</main>
 
-	<footer>
-		<p>&copy; 2023 Chunran Kang. All rights reserved.</p>
-	</footer>
+    <footer>
+        <p>&copy; 2023 Chunran Kang. All rights reserved.</p>
+    </footer>
 </body>
 </html>
