set the base nav bar for all

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
-        
-
+        <link rel="contact_style" href="contact_style.css">
     </head>
 
     <body>
@@ -23,9 +22,17 @@
             <h1>My Contact Information</h1>
         </header>
         <main>
-            <section>
-                <h2>Contact Me</h2>
+            <section class="boxes container">
+                <h2 class="box box1">My Contact</h2>
+                    <ul>Chunran Kang</ul>
+                    <ul>Email: chunrankang@gmail.com</ul>
+                    <ul>Tel:(902)-441-6958</ul>
+                    <ul>P.O. Box 000</ul>
+                    <ul>Halifax, NS</ul> 
+
+                <h2 class="box box2">Contact Me</h2>
                 <form>
+                    
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
                     <label for="email">Email:</label>
@@ -34,6 +41,7 @@
                     <textarea id="message" name="message" required></textarea>
                     <input type="submit" value="Submit">
                 </form>
+                <h4 class="box box3">I look forward to answering your email!</h4>
             </section>
         </main>
         <footer>
