--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Chunran Kang - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="portfolio_base.css">
-   
+    <link rel="stylesheet" href="index_style.css">
 
   </head>
   <body>
@@ -19,7 +19,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav> 
-      <h1>My e-Portfolio Webpage</h1>
+      <h1>Chunran's e-Portfolio Webpage</h1>
     </header>
   
     <main>
