--- a/goals.html
+++ b/goals.html
@@ -7,50 +7,49 @@
   <link rel="stylesheet" href="portfolio_base.css">
 </head>
 <body>
-    <header>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="goals.html">Goals</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>  
-        <h1>My Goals for Learning HTML and CSS</h1>
-      </header>
+  <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="goals.html">Goals</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>  
+      <h1>My Goals for Learning HTML and CSS</h1>
+    </header>
 
-  
-  <h2>Short-term Goals</h2>
-  <ol>
-    <li>Learn the basic HTML tags and their attributes, including &lt;html&gt;, &lt;head&gt;, &lt;title&gt;, &lt;body&gt;, &lt;h1&gt; - &lt;h6&gt;, &lt;p&gt;, &lt;a&gt;, &lt;img&gt;, and &lt;ul&gt;/&lt;ol&gt;/&lt;li&gt;.</li>
-    <li>Understand the CSS syntax and the box model concept, including selectors, properties, values, and units.</li>
-    <li>Practice coding HTML and CSS by creating a simple personal website from scratch, including a header, navigation bar, content sections, and a footer.</li>
-    <li>Use CSS to style the website, such as changing the font family, font size, color, background, border, and padding of the elements.</li>
-    <li>Learn how to use developer tools like the browser inspector and validator to troubleshoot errors and improve code quality.</li>
-  </ol>
-  
-  <h2>Medium-term Goals</h2>
-  <ol>
-    <li>Expand my HTML and CSS knowledge by learning more advanced topics such as responsive design, CSS grid, Flexbox, and media queries.</li>
-    <li>Apply my skills to create more complex and interactive web pages, such as forms, tables, images galleries, and animations.</li>
-    <li>Practice accessibility and usability principles by designing web pages that are easy to use and navigate for all users, including those with disabilities.</li>
-    <li>Explore CSS preprocessors such as Sass or Less to write more efficient and reusable code.</li>
-    <li>Collaborate with other developers and designers to work on group projects and learn from each other's skills and perspectives.</li>
-  </ol>
-  
-  <h2>Long-term Goals</h2>
-  <ol>
-    <li>Become proficient in HTML and CSS and able to create professional-grade websites that meet the industry's standards and best practices.</li>
-    <li>Keep up-to-date with the latest web design trends and technologies by attending conferences, reading blogs, and participating in online communities.</li>
-    <li>Learn front-end frameworks such as Bootstrap or Materialize to speed up the development process and improve the quality of the code.</li>
-    <li>Acquire a deep understanding of web development principles and languages such as JavaScript, jQuery, and React to create more interactive and dynamic web pages.</li>
-    <li>Apply my skills to real-world projects and contribute to the open-source community to make the web a better and more accessible place for everyone.</li>
-  </ol>
-</body>
+    <main>  
+      <h2>Short-term Goals</h2>
+      <ol>
+        <li>Learn the basic HTML tags and their attributes, including &lt;html&gt;, &lt;head&gt;, &lt;title&gt;, &lt;body&gt;, &lt;h1&gt; - &lt;h6&gt;, &lt;p&gt;, &lt;a&gt;, &lt;img&gt;, and &lt;ul&gt;/&lt;ol&gt;/&lt;li&gt;.</li>
+        <li>Understand the CSS syntax and the box model concept, including selectors, properties, values, and units.</li>
+        <li>Practice coding HTML and CSS by creating a simple personal website from scratch, including a header, navigation bar, content sections, and a footer.</li>
+        <li>Use CSS to style the website, such as changing the font family, font size, color, background, border, and padding of the elements.</li>
+        <li>Learn how to use developer tools like the browser inspector and validator to troubleshoot errors and improve code quality.</li>
+      </ol>
+      
+      <h2>Medium-term Goals</h2>
+      <ol>
+        <li>Expand my HTML and CSS knowledge by learning more advanced topics such as responsive design, CSS grid, Flexbox, and media queries.</li>
+        <li>Apply my skills to create more complex and interactive web pages, such as forms, tables, images galleries, and animations.</li>
+        <li>Practice accessibility and usability principles by designing web pages that are easy to use and navigate for all users, including those with disabilities.</li>
+        <li>Explore CSS preprocessors such as Sass or Less to write more efficient and reusable code.</li>
+        <li>Collaborate with other developers and designers to work on group projects and learn from each other's skills and perspectives.</li>
+      </ol>
+      
+      <h2>Long-term Goals</h2>
+      <ol>
+        <li>Become proficient in HTML and CSS and able to create professional-grade websites that meet the industry's standards and best practices.</li>
+        <li>Keep up-to-date with the latest web design trends and technologies by attending conferences, reading blogs, and participating in online communities.</li>
+        <li>Learn front-end frameworks such as Bootstrap or Materialize to speed up the development process and improve the quality of the code.</li>
+        <li>Acquire a deep understanding of web development principles and languages such as JavaScript, jQuery, and React to create more interactive and dynamic web pages.</li>
+        <li>Apply my skills to real-world projects and contribute to the open-source community to make the web a better and more accessible place for everyone.</li>
+      </ol>
+    </main>
 
-
-<footer>
-    <p>&copy; 2023 Chunran Kang. All rights reserved.</p>
-</footer>
+    <footer>
+        <p>&copy; 2023 Chunran Kang. All rights reserved.</p>
+    </footer>
 </html>
