Css for Contact

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
-        <link rel="contact_style" href="contact_style.css">
+        <link rel="stylesheet" href="contact_style.css">
     </head>
 
     <body>
@@ -24,11 +24,13 @@
         <main>
             <section class="boxes container">
                 <h2 class="box box1">My Contact</h2>
-                    <ul>Chunran Kang</ul>
-                    <ul>Email: chunrankang@gmail.com</ul>
-                    <ul>Tel:(902)-441-6958</ul>
-                    <ul>P.O. Box 000</ul>
-                    <ul>Halifax, NS</ul> 
+                <ul>
+                    <li>Chunran Kang</li>
+                    <li>Email: chunrankang@gmail.com</li>
+                    <li>Tel:(902)-441-6958</li>
+                    <li>P.O. Box 000</li>
+                    <li>Halifax, NS</li> 
+                </ul>
 
                 <h2 class="box box2">Contact Me</h2>
                 <form>
