--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
         <link rel="stylesheet" href="contact_style.css">
+        <img src="welcome.png" alt="welcome">
     </head>
 
     <body>
