--- a/skills.html
+++ b/skills.html
@@ -4,18 +4,19 @@
         <title>Chunran Kang - Skills </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
-       
+        <img src="welcome.png" alt="welcome">
 
     </head>
     <body>
         <header>
             <nav>
+                <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="goals.html">Goals</a></li>
                 <li><a href="contact.html">Contact</a></li>
-              </ul>
+                </ul>
             </nav>
             <h1>My Skills and Education</h1>
         </header>
