--- a/index.html
+++ b/index.html
@@ -11,83 +11,58 @@
   </head>
   <body>
     <header> 
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="goals.html">Goals</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
+          <div class="container"></div>
+          <a class="navbar-brand" href="#">Chunran</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <ul  class="navbar-nav ms-auto">
+              <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item active"><a class="nav-link" href="skills.html">Skills</a></li>
+              <li class="nav-item active"><a class="nav-link" href="resume.html">Resume</a></li>
+              <li class="nav-item active"><a class="nav-link" href="goals.html">Goals</a></li>
+              <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
+        </div>
       </nav> 
-      <h1>Chunran's e-Portfolio Webpage</h1>
     </header>
   
     <main>
-      <section id="home">
-        <h1>Welcome to My ePortfolio</h1>
-        <p>Here you can find information about me, my skills, goals, resume and contact information.</p>
-      </section>
+      <section class="bgimage" id="home">
+        <div class="container-fluid">
+            <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                <h2 class="hero_title">Hi, it's me Kang</h2>
+                <p class="hero_desc">Here you can find more information about me~</p>
+            </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <h1>About Me</h1>
+        <img src="Photo/thumbnail-1.jpg" class= "imageAboutPage" alt="">
+        <p>
+        My name is Chunran Kang, and I am currently a first-year student at Nova Scotia Community College pursuing a diploma in IT Database Administration.
+        I have always been interested in the field of technology, and I am excited to be learning about databases and how they work.
+        </p>
+      <ul>
+        <li>Name:       Chunran Kang</li>
+        <li>School:     NSCC</li>
+        <li>Occupation: DBA Student </li>
+      </ul>
+
+      <p>
+      I have developed foundations in programming languages such as Java and Python, as well as SQL database
+      management. I have also completed coursework in data analysis by using Tableau, which has further
+      developed my analytical and problem-solving skills.
+      Having all the knowledge of database and programming, I can assist in the development and
+      implementation of data optimization, support database backup and recovery processes.
+      </p>
+
+    </section>
   
-      <section id="about">
-        <h2>About Me</h2>
-          <p>
-          My name is Chunran Kang, and I am currently a first-year student at Nova Scotia Community College pursuing a diploma in IT Database Administration.
-          I have always been interested in the field of technology, and I am excited to be learning about databases and how they work.
-          My goal is to gain the knowledge and skills necessary to succeed in this field and hopefully secure a job in IT database administration upon graduation.
-          I am passionate about problem-solving and enjoy working with data, and I believe that this program will equip me with the necessary tools to pursue a career in this field.
-          </p>
-  
-          <p>
-          I have developed foundations in programming languages such as Java and Python, as well as SQL database
-          management. I have also completed coursework in data analysis by using Tableau, which has further
-          developed my analytical and problem-solving skills.
-          Having all the knowledge of database and programming, I can assist in the development and
-          implementation of data optimization, support database backup and recovery processes.
-          </p>
-          <p>
-          In addition, I have 4 years working experience as driving instructor and 4 years as realtor to my technical
-          skills, my strong communication and teamwork abilities can help your team growth. I am a proactive
-          problem solver with excellent analytical, which allow me to quickly identify issues and provide solutions.
-          I have participated in group where I have collaborated with team members to achieve common goals. I am
-          confident that these skills will enable me to contribute effectively to your team.
-          </p>
-  
-  
-  
-      </section>
-  
-      <section id="resume">
-        <h2>Resume</h2>
-        <p>Download my resume <a href="resume.pdf" target="_blank">here</a>.</p>
-      </section>
-  
-      <section id="education">
-        <h2>Education & Certification</h2>
-        <ul>
-          09/2022 - Present | IT Database Administration in NSCC<br>
-          01/2019 - 03/2019 | Salesperson Licensing Course in Nova Scotia Association of REALTORS<br>
-          05/2009 – 10/2012 | Bachelor of Commerce in Saint Mary’s University<br>
-  
-        </ul>
-      </section>
-  
-      <section id="contact">
-        <h2>Contact Me</h2>
-        <p>You can reach me at chunrankang@gmail.com or through the form below:</p>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name"><br>
-  
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email"><br>
-  
-          <label for="message">Message:</label>
-          <textarea id="message" name="message"></textarea><br>
-  
-          <input type="submit" value="Send">
-        </form>
-      </section>
     </main>
   
     <footer>
