change on goals.css

--- a/goals.html
+++ b/goals.html
@@ -49,7 +49,7 @@
         <li>Happy life</li>
       </ol>
     </main>
-
+</body>
     <footer>
         <p>&copy; 2023 Chunran Kang. All rights reserved.</p>
     </footer>
