--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
         <img src="welcome.png" alt="welcome">
+        <link rel="stylesheet" href="skill_style.css">
 
     </head>
     <body>
@@ -23,6 +24,7 @@
 
 	<main>
 		<section>
+            <img src="photo/skills.jpg" alt="skills">
 			<h2>Skills</h2>
 			<ul>
 				<li>HTML5</li>
