--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio_base.css">
     <img src="welcome.png" alt="welcome">
+    <link rel="stylesheet" href="resume_style.css">
 </head>
     <body>
         <header>
