--- a/contact.html
+++ b/contact.html
@@ -6,20 +6,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="portfolio_base.css">
         <link rel="stylesheet" href="contact_style.css">
-        <img src="welcome.png" alt="welcome">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="skills.html">Skills</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="goals.html">Goals</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+            <div class="topnav">
+                <a href="#home" class="active">Chunran</a>
+        
+                <div id="myLinks">
+                  <a href="index.html">Home</a>
+                  <a href="skills.html">Skills</a>
+                  <a href="resume.html">Resume</a>
+                  <a href="goals.html">Goals</a>
+                  <a href="contact.html">Contact</a>
+                </div>
+        
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                  <i class="fa fa-bars"></i>
+                </a>
+              </div>
+              <script>
+                function myFunction() {
+                  var x = document.getElementById("myLinks");
+                  if (x.style.display === "block") {
+                    x.style.display = "none";
+                  } else {
+                    x.style.display = "block";
+                  }
+                }
+                </script>
             <h1>My Contact Information</h1>
         </header>
         <main>
