--- a/goals.html
+++ b/goals.html
@@ -6,19 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="portfolio_base.css">
   <link rel="stylesheet" href="goals_style.css">
-  <img src="welcome.png" alt="welcome">
 </head>
 <body>
   <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="goals.html">Goals</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>  
+    <div class="topnav">
+      <a href="#home" class="active">Chunran</a>
+
+      <div id="myLinks">
+        <a href="index.html">Home</a>
+        <a href="skills.html">Skills</a>
+        <a href="resume.html">Resume</a>
+        <a href="goals.html">Goals</a>
+        <a href="contact.html">Contact</a>
+      </div>
+
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <script>
+      function myFunction() {
+        var x = document.getElementById("myLinks");
+        if (x.style.display === "block") {
+          x.style.display = "none";
+        } else {
+          x.style.display = "block";
+        }
+      }
+      </script>
       <h1>My Goals </h1>
     </header>
 
