--- a/index.html
+++ b/index.html
@@ -7,25 +7,35 @@
     <link rel="stylesheet" href="portfolio_base.css">
     <link rel="stylesheet" href="index_style.css">
     <img src="welcome.png" alt="welcome">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header> 
-      <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
-          <div class="container"></div>
-          <a class="navbar-brand" href="#">Chunran</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-            <ul  class="navbar-nav ms-auto">
-              <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item active"><a class="nav-link" href="skills.html">Skills</a></li>
-              <li class="nav-item active"><a class="nav-link" href="resume.html">Resume</a></li>
-              <li class="nav-item active"><a class="nav-link" href="goals.html">Goals</a></li>
-              <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
+    <header>
+      <div class="topnav">
+        <a href="#home" class="active">Chunran</a>
+
+        <div id="myLinks">
+          <a href="index.html">Home</a>
+          <a href="skills.html">Skills</a>
+          <a href="resume.html">Resume</a>
+          <a href="goals.html">Goals</a>
+          <a href="contact.html">Contact</a>
         </div>
-      </nav> 
+
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+      <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
     </header>
   
     <main>
